<resources>
    <string name="app_name">PyTournaments</string>

    <!-- Login Fragment -->
    <string name="login_fragment_title">PyTournaments</string>
    <string name="login_fragment_email">Email</string>
    <string name="login_fragment_password">Senha</string>
    <string name="login_fragment_logon">Entrar</string>
    <string name="login_fragment_sign_up">Criar conta</string>
    <string name="login_fragment_forgot_retype">Confirme sua senha</string>
    <string name="login_fragment_forgot">Esqueceu a senha?</string>
    <string name="forgot_fragment_email">Insira seu email</string>
    <string name="forgot_fragment_send">Enviar email de recuperação</string>
    <string name="signup_name">Insira seu nome aqui</string>
    <string name="signup_username">Insira seu apelido aqui</string>
    <string name="signup_preferences">Escolha suas preferências</string>

    <string name="login_complete">Usuário logou com sucesso!</string>
    <string name="login_invalid_credentials">Usuário ou senha inválidos</string>
    <string name="login_user_not_found">Usuário não encontrado</string>
    <string name="login_invalid_email">Insira um Email válido!</string>
    <string name="login_blank_password">A Senha deve ser preenchida!</string>
    <string name="login_blank_email">O Email deve ser preenchido!</string>
    <string name="login_equal_passwords">As senhas devem ser iguais!</string>
    <string name="login_invalid_user">Usuário inválido</string>
    <string name="login_singup">Usuário cadastrado com sucesso</string>
    <string name="login_forgot">Email enviado com sucesso</string>
    <string name="unexpected_error">Um erro inesperado ocorreu!</string>
    <string name="blank_name">O nome do torneio não pode ser nulo</string>
    <string name="blank_date">A data não pode ser nula</string>
    <string name="blank_time">A hora não pode ser nula</string>
    <string name="blank_description">A descrição não pode ser nula</string>
    <string name="null_location">É necessária uma localização</string>
    <string name="datetime_error">Data ou hora não escritas conforme o exemplo no campo</string>
    <string name="tournament_create_name">Insira o nome do torneio aqui</string>
    <string name="tournament_create_description">Insira uma descrição aqui</string>
    <string name="tournament_create_date">DD/MM/YYYY</string>
    <string name="tournament_create_time">HH:mm</string>
    <string name="tournament_create_checkbox">Você irá participar?</string>
    <string name="tournament_create_localization">Escolher localização</string>
    <string name="register">Cadastrar</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="choose">Escolher</string>

    <!-- onboarding fragment -->
    <string name="comecar">Começar</string>
    <string name="confirm">Confirmar</string>
    <string name="skip">Skip</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="splash_screen_first_title">Crie seu próprio perfil</string>
    <string name="splash_screen_second_title">Encontre os torneios próximos a você</string>
    <string name="splash_screen_third_title">Encontre pessoas com gostos similares</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="busca">Busca</string>
    <string name="torneios">Torneios</string>
    <string name="grupos">Grupos</string>
    <string name="perfil">Perfil</string>
    <string name="title_activity_teste_bottom">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_testebottom">MainActivity</string>
    <string name="title_activity_principalteste">MainActivity</string>
    <string name="titlePrincial">PyTournaments</string>
    <string name="proximos_torneios_online">Próximos Torneios Online</string>
    <string name="proximos_torneios_presencial">Próximos Torneios Presenciais</string>
    <string name="torneios_participados">Torneios Participando</string>
    <string name="fab_content_desc" />

</resources>