<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mainFragment"
        android:checked="true"
        android:icon="@drawable/casa"
        android:title="@string/home"/>

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/lupa"
        android:title="@string/busca"/>

    <item
        android:id="@+id/mainTournamentsFragment"
        android:icon="@drawable/trofeu"
        android:title="@string/torneios"/>

    <item
        android:id="@+id/mainGroupsFragment"
        android:icon="@drawable/escudo"
        android:title="@string/grupos"/>

    <item
        android:id="@+id/profileMainUserFragment"
        android:icon="@drawable/perfil"
        android:title="@string/perfil"/>

</menu>