<?xml version="1.0" encoding="utf-8"?>

<<<<<<< HEAD
<layout xmlns:android="http://schemas.android.com/apk/res/android"
=======
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
>>>>>>> d46be932b7c7d60602fe41ec305428539879c660
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
<<<<<<< HEAD
        <variable
            name="codigoDoFragmento"
            type="com.mobile.pytournaments.ui.fragment.login.LoginFragment" />


    </data>



=======

    </data>

>>>>>>> d46be932b7c7d60602fe41ec305428539879c660
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clLoginFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
<<<<<<< HEAD
=======
        android:background="?backgroundColor"
>>>>>>> d46be932b7c7d60602fe41ec305428539879c660
        tools:context=".ui.fragment.login.LoginFragment">

        <TextView
            android:id="@+id/tvLoginTitle"
<<<<<<< HEAD
=======
            style="?titleStyle"
>>>>>>> d46be932b7c7d60602fe41ec305428539879c660
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/login_fragment_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <EditText
            android:id="@+id/tvEmailLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="64dp"
            android:ems="10"
            android:hint="@string/login_fragment_email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />

        <EditText
            android:id="@+id/tvPasswordLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="64dp"
            android:ems="10"
            android:hint="@string/login_fragment_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEmailLogin" />

        <Button
            android:id="@+id/btLoginLogon"
<<<<<<< HEAD
=======
            style="?secondaryButtonStyle"
>>>>>>> d46be932b7c7d60602fe41ec305428539879c660
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="128dp"
            android:layout_marginEnd="128dp"
            android:layout_marginBottom="16dp"
            android:text="@string/login_fragment_logon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

<<<<<<< HEAD
        <Button
=======
        <TextView
>>>>>>> d46be932b7c7d60602fe41ec305428539879c660
            android:id="@+id/tvLoginForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/login_fragment_forgot"
<<<<<<< HEAD
            android:onClick="@{codigoDoFragmento::irEsqueciSenha}"
=======
>>>>>>> d46be932b7c7d60602fe41ec305428539879c660
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPasswordLogin" />

        <TextView
            android:id="@+id/tvLoginSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/login_fragment_sign_up"
<<<<<<< HEAD
            android:onClick="@{codigoDoFragmento::irSignUp}"
=======
>>>>>>> d46be932b7c7d60602fe41ec305428539879c660
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLoginForgotPassword" />
    </androidx.constraintlayout.widget.ConstraintLayout>
<<<<<<< HEAD

</layout>

=======
</layout>
>>>>>>> d46be932b7c7d60602fe41ec305428539879c660
