<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    
    <data>
        <variable
            name="fragment"
            type="com.mobile.pytournaments.ui.fragment.login.LoginSignUpInfoFragment" />
        <variable
            name="viewmodel"
            type="com.mobile.pytournaments.viewmodel.LoggedUserViewModel" />
        <variable
            name="usercadastraapi"
            type="com.mobile.pytournaments.domain.UserCadastraApi" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/signupInfoFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?backgroundColor"
        tools:context=".ui.fragment.login.LoginSignUpInfoFragment">


        <EditText
            android:id="@+id/etName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/signup_name"
            android:textAlignment="center"
            android:text="@={viewmodel.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/signup_username"
            android:text="@={viewmodel.username}"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etName" />

        <TextView
            android:id="@+id/tvRecyclerviewTitle"
            style="?infoText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/signup_preferences"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etUsername" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPreferences"
            android:layout_width="339dp"
            android:layout_height="438dp"
            android:layout_marginTop="96dp"
            android:layout_marginBottom="96dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.484"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRecyclerviewTitle"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/btSignUpBd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{fragment::signUpUsersBd}"
            android:text="Cadastrar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rvPreferences" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
